--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,17 @@
 body {
-	font: 100 100% Helvetica, Arial, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 1em;
+	font-weight: 100;
 	color: rgb(50,50,50);
 	line-height: 1.5em;
-	width: 100%;
+	margin: 0 auto;
+	max-width: 43.5em;
+	padding: 0 2em;
+}
+@media screen and (min-width: 48em) {
+	body {
+		max-width: 43.5em;
+	}
 }
 h1 {
 	font-weight: bold;
@@ -17,9 +26,6 @@ a {
 }
 em {
 	font-style: italic;
-}
-#page {
-	padding: 0 2em;
 }
 #masthead {
 	padding: 3em 0 1.2em;
