--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -13,10 +13,9 @@
 		<h1><a href="/">John Berberich</a></h1>
 		<nav id="main-nav">
 			<ul>
-				<li><a href="about">About</a></li>
-				<li><a href="projects">Projects</a></li>
-				<li><a href="blog">Blog</a></li>
-				<li><a href="contact">Contact</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
