--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "_layout.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
 	<article class="entry">
