Styling main nav and splitting out Google Analytics into separate include file.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "_layout.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Contact{% endblock %}
 {% block content %}
-	<h1>Contact me</h1>
+	<h2>Contact me</h2>
 {% endblock %}
