--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-/*
-* HTML5 Boilerplate
-*
-* What follows is the result of much research on cross-browser styling.
-* Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
-* Kroc Camen, and the H5BP dev community and team.
-*/
-
-/* ==========================================================================
-Base styles: opinionated defaults
-========================================================================== */
-
 html,
 button,
 input,
@@ -21,11 +9,13 @@ textarea {
 body {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 1em;
+	font-weight: 100;
 	line-height: 1.6;
 }
 
 a {
-	color: #00e;
+	/*color: #00e;*/
+	color: rgb(100,100,100);
 }
 
 a:visited {
@@ -53,6 +43,8 @@ textarea {  /* Allow only vertical resizing of textareas. */
 /* ==========================================================================
 Author's custom styles
 ========================================================================== */
+
+
 #masthead {
 	text-align: center;
 }
@@ -60,17 +52,51 @@ Author's custom styles
 	text-decoration: none;
 	color: #222;
 }
+
+#main-nav {
+	float: left;
+	width: 100%;
+	background: #fff;
+	border-top: 4px solid #222;
+	overflow: hidden;
+	position: relative;
+	margin-top: -5px;
+	/*margin-bottom: -25px;*/
+	margin-bottom: 20px;
+}
 #main-nav ul {
-	list-style-type: none;
-	margin: -20px 0 0;
+	clear: left;
+	float: left;
+	list-style: none;
+	margin: 0;
 	padding: 0;
+	position: relative;
+	left: 50%;
+	text-align: center;
 }
-#main-nav a {
-	color: #222;
+#main-nav ul li {
+	display: block;
+	float: left;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	right: 50%;
+}
+#main-nav ul li a {
 	font-size: 1.2em;
+	display: block;
+	margin: 0 0 0 2px;
+	padding: 13px 18px;
+	background: #ddd;
+	color: #222;
+	text-decoration: none;
+	line-height: 1.3em;
 }
 
-
+.content {
+	
+}
 
 
 /* ==========================================================================
@@ -78,7 +104,6 @@ Helper classes
 ========================================================================== */
 
 /* Prevent callout */
-
 .nocallout {
 	-webkit-touch-callout: none;
 }
@@ -88,14 +113,12 @@ Helper classes
 }
 
 /* A hack for HTML5 contenteditable attribute on mobile */
-
 textarea[contenteditable] {
 	-webkit-appearance: none;
 }
 
 /* A workaround for S60 3.x and 5.0 devices which do not animated gif images if
 they have been set as display: none */
-
 .gifhidden {
 	position: absolute;
 	left: -100%;
@@ -104,7 +127,6 @@ they have been set as display: none */
 /*
 * Image replacement
 */
-
 .ir {
 	background-color: transparent;
 	background-repeat: no-repeat;
@@ -123,7 +145,6 @@ they have been set as display: none */
 /*
 * Hide from both screenreaders and browsers: h5bp.com/u
 */
-
 .hidden {
 	display: none !important;
 	visibility: hidden;
@@ -132,7 +153,6 @@ they have been set as display: none */
 /*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */
-
 .visuallyhidden {
 	border: 0;
 	clip: rect(0 0 0 0);
@@ -148,7 +168,6 @@ they have been set as display: none */
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */
-
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
 	clip: auto;
@@ -162,7 +181,6 @@ they have been set as display: none */
 /*
 * Hide visually and from screenreaders, but maintain layout
 */
-
 .invisible {
 	visibility: hidden;
 }
@@ -171,7 +189,6 @@ they have been set as display: none */
 * Clearfix helper
 * Used to contain floats: h5bp.com/q
 */
-
 .clearfix:before,
 .clearfix:after {
 	content: "";
@@ -186,7 +203,6 @@ they have been set as display: none */
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */
-
 .clearfix {
 	*zoom: 1;
 }
