--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{% block title %}{% endblock %} -John Berberich</title>
+	<title>{% block title %}{% endblock %} - John Berberich</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header id="masthead">
-		<h1><a href="/">John Berberich</a></h1>
+		<h1><a href="index.html">John Berberich</a></h1>
 		<nav id="main-nav">
 			<ul>
 				<li><a href="about.html">About</a></li>
@@ -20,7 +20,7 @@
 		</nav>
 	</header>
 
-	<section class="content">
+	<section id="content">
 	{% block content %}
 	{% endblock %}
 	</section>
@@ -29,11 +29,6 @@
 		<p id="copyright">Copyright &copy; 2013 John Berberich</p>
 	</footer>
 
-	<script type="text/javascript">
-		var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
-		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-		s.parentNode.insertBefore(g,s)}(document,'script'));
-	</script>
+	{% include "_ga.html" %}
 </body>
 </html>
