--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "_layout.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}About{% endblock %}
 {% block content %}
-	<h1>About me</h1>
+	<h2>About me</h2>
 {% endblock %}
