--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,8 +1,8 @@
 {% extends "_layout.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Projects{% endblock %}
 {% block content %}
-	<h1>Projects</h1>
+	<h2>Projects</h2>
 	<ul>
-		<li><a href="grid.html">Conway's Game of Life and more grid fun</a></li>
+		<li><a href="projects/grid.html">Conway's Game of Life and more grid fun</a></li>
 	</ul>
 {% endblock %}
