Added /games dir and started working on Pong. Currently two Pong players can move their paddles independently with a/z and k/m keys.

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -14,20 +14,22 @@
 		<nav id="main-nav">
 			<ul>
 				<li><a href="about.html">About</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="games.html">Games</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
-
+	<div style="width:280px; margin:auto;">
 	<section id="content">
 	{% block content %}
 	{% endblock %}
 	</section>
-
+	
 	<footer>
 		<p id="copyright">Copyright &copy; 2013 John Berberich</p>
 	</footer>
+
+	</div>
 
 	{% include "_ga.html" %}
 </body>
