--- a/templates/games.html
+++ b/templates/games.html
@@ -1,8 +1,9 @@
 {% extends "_layout.html" %}
 {% block title %}Games{% endblock %}
 {% block content %}
-	<h2>Games</h2>
+	<h2>Clones</h2>
 	<ul>
+		<li><a href="games/conway.html">Conway's Game of Life</a></li>
 		<li><a href="games/pong.html">Pong</a></li>
 		<!--<li><a href="games/canasta.html">Canasta</a></li>-->
 	</ul>
