--- a/templates/index.html
+++ b/templates/index.html
@@ -2,21 +2,25 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 	<article class="entry">
-		<p itemscope itemtype="http://data-vocabulary.org/Person">Hello! I'm
-		<span itemprop="name">John Berberich</span>. I'm a
-		<span itemprop="title">programmer</span> in
-		<span itemprop=address" itemscope itemtype="http://data-vocabulary.org/Address>
-			<span itemprop="locality">Cincinnati</span>,
-			<span itemprop="region">Ohio</span></span>.
-		I like to program, scuba dive, run, and travel.</p>
-		<p>Please download a copy of my
+		<p itemscope itemtype="http://data-vocabulary.org/Person">
+			Hello, thanks for stopping by! As you might have guessed,
+			my name is <span itemprop="name">John Berberich</span>.
+			I'm a <span itemprop="title">programmer</span>
+			and <span itemprop="title">scuba diver</span>
+			in <span itemprop=address" itemscope itemtype="http://data-vocabulary.org/Address>
+				<span itemprop="locality">Cincinnati</span>,
+				<span itemprop="region">Ohio</span></span>.
+			I typically spend my time writing games, exploring the ocean, pounding pavement, and wandering the globe.
+		</p>
+		<p>While you're here, check
+		out some <a href="games.html">projects</a> I've been working
+		on and download a copy of my
 		<a href="https://dl.dropbox.com/u/4841094/John%20Berberich%20-%20Software%20Engineer.pdf">
-		résumé</a>, connect with me on
-		<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>, and check
-		out some <a href="projects.html">projects</a> I've been working
-		on (just one right now).
+		resume</a>.
 		<p>If you want to talk, feel free to contact me via
 		<a href="mailto:jberberich@gmail.com">email</a> or
-		<a href="https://twitter.com/johnberberich">Twitter</a>.</p>
+		<a href="https://twitter.com/johnberberich">Twitter</a>,
+		and if you already know me, connect with me on
+		<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>.</p>
 	<article>
 {% endblock %}
