Add google-site-verification meta tag to default layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+	<meta name="description" content="" />
+	<meta name="google-site-verification" content="oTmLIeNN96Rw9Xv70CTpsVzkQJMCuTqe3GllV01s-5A" />
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
 </head>
