--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,34 +3,49 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="" />
 	<meta name="google-site-verification" content="oTmLIeNN96Rw9Xv70CTpsVzkQJMCuTqe3GllV01s-5A" />
-	<link rel="stylesheet" href="css/normalize.css" type="text/css">
-	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/font-awesome.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-	<header id="masthead">
-		<h1><a href="index.html">John Berberich</a></h1>
-		<nav id="main-nav">
-			<ul>
-				<li><a href="about.html">About</a></li>
-				<li><a href="games.html">Games</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div style="width:280px; margin:auto;">
-	<section id="content">
-	{{ content }}
-	</section>
-	
-	<footer>
-		<p id="copyright">Copyright &copy; 2013 John Berberich</p>
-	</footer>
-
+	<div id="wrap">
+		<div class="container">
+			<header class="page-header">
+				<nav>
+					<ul class="nav nav-pills pull-right">
+						<li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
+						<li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
+						<li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="games.html">Games</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</nav>
+				<h1>John Berberich</h1>
+			</header>
+			<section>
+			{{ content }}
+			</section>
+		</div>
 	</div>
 
+	<footer id="footer">
+		<div class="container">
+			<p id="copyright" class="text-muted">Copyright &copy; 2013 John Berberich</p>
+		</div>
+	</footer>
+
+    <script src="js/jquery-1.10.2.js"></script>
+    <script src="js/bootstrap.js"></script>
 	<script type="text/javascript">
 		var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
