--- a/css/style.css
+++ b/css/style.css
@@ -1,223 +1,25 @@
-html,
-button,
-input,
-select,
-textarea {
-	color: #222;
+html, body {
+	height: 100%;
 }
 
-body {
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: 1em;
-	font-weight: 100;
-	line-height: 1.6;
-}
-
-a {
-	/*color: #00e;*/
-	color: rgb(100,100,100);
-}
-
-a:visited {
-	color: #551a8b;
-}
-
-a:hover {
-	color: #06e;
-}
-
-img {  /* Remove the gap between images and the bottom of their containers: h5bp.com/i/440 */
-	vertical-align: middle;
-}
-
-fieldset {  /* Remove default fieldset styles. */
-	border: 0;
-	margin: 0;
-	padding: 0;
-}
-
-textarea {  /* Allow only vertical resizing of textareas. */
-	resize: vertical;
-}
-
-/* ==========================================================================
-Author's custom styles
-========================================================================== */
-
-
-#masthead {
-	text-align: center;
-}
-#masthead a {
-	text-decoration: none;
-	color: #222;
-}
-
-#main-nav {
-	float: left;
-	width: 100%;
-	background: #fff;
-	border-top: 4px solid #222;
-	overflow: hidden;
-	position: relative;
-	margin-top: -5px;
-	/*margin-bottom: -25px;*/
-	margin-bottom: 20px;
-}
-#main-nav ul {
-	clear: left;
-	float: left;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	position: relative;
-	left: 50%;
-	text-align: center;
-}
-#main-nav ul li {
-	display: block;
-	float: left;
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	position: relative;
-	right: 50%;
-}
-#main-nav ul li a {
-	font-size: 1.2em;
-	display: block;
-	margin: 0 0 0 2px;
-	padding: 13px 18px;
-	background: #ddd;
-	color: #222;
-	text-decoration: none;
-	line-height: 1.3em;
-}
-
-.content {
-	
-}
-
-
-/* ==========================================================================
-Helper classes
-========================================================================== */
-
-/* Prevent callout */
-.nocallout {
-	-webkit-touch-callout: none;
-}
-
-.pressed {
-	background-color: rgba(0, 0, 0, 0.7);
-}
-
-/* A hack for HTML5 contenteditable attribute on mobile */
-textarea[contenteditable] {
-	-webkit-appearance: none;
-}
-
-/* A workaround for S60 3.x and 5.0 devices which do not animated gif images if
-they have been set as display: none */
-.gifhidden {
-	position: absolute;
-	left: -100%;
-}
-
-/*
-* Image replacement
-*/
-.ir {
-	background-color: transparent;
-	background-repeat: no-repeat;
-	border: 0;
-	direction: ltr;
-	display: block;
-	overflow: hidden;
-	text-align: left;
-	text-indent: -999em;
-}
-
-.ir br {
-	display: none;
-}
-
-/*
-* Hide from both screenreaders and browsers: h5bp.com/u
-*/
-.hidden {
-	display: none !important;
-	visibility: hidden;
-}
-
-/*
-* Hide only visually, but have it available for screenreaders: h5bp.com/v
-*/
-.visuallyhidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
-}
-
-/*
-* Extends the .visuallyhidden class to allow the element to be focusable
-* when navigated to via the keyboard: h5bp.com/p
-*/
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-	clip: auto;
+#wrap {
+	min-height: 100%;
 	height: auto;
-	margin: 0;
-	overflow: visible;
-	position: static;
+	margin: 0 auto -60px;
+	padding: 0px 0px 60px;
+}
+
+#footer {
+	height: 60px;
+	background-color: #F5F5F5;
+}
+
+.container {
 	width: auto;
+	max-width: 680px;
+	padding: 0px 15px;
 }
 
-/*
-* Hide visually and from screenreaders, but maintain layout
-*/
-.invisible {
-	visibility: hidden;
+.container .text-muted {
+	margin: 20px 0px;
 }
-
-/**
-* Clearfix helper
-* Used to contain floats: h5bp.com/q
-*/
-.clearfix:before,
-.clearfix:after {
-	content: "";
-	display: table;
-}
-
-.clearfix:after {
-	clear: both;
-}
-
-/*
-* For IE 6/7 only
-* Include this rule to trigger hasLayout and contain floats.
-*/
-.clearfix {
-	*zoom: 1;
-}
-
-/* ==========================================================================
-EXAMPLE Media Queries for Responsive Design.
-Theses examples override the primary ('mobile first') styles.
-Modify as content requires.
-========================================================================== */
-
-/*@media only screen and (min-width: 800px) {*/
-	/* Style adjustments for viewports that meet the condition */
-/*}*/
-
-/*@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-	   only screen and (min-resolution: 144dpi) {*/
-	/* Style adjustments for viewports that meet the condition */
-/*}*/
