--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
 					</ul>
 				</nav>
 				<h1>John Berberich</h1>
+				<p class="lead">I'm a software engineer in Cincinnati.</p>
 			</header>
 			<section>
 			{{ content }}
