--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,20 +22,35 @@
 			<header class="page-header">
 				<nav>
 					<ul class="nav nav-pills pull-right">
-						<li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
-						<li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
-						<li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="games.html">Games</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</nav>
-				<h1>John Berberich</h1>
-				<p class="lead">I'm a software engineer in Cincinnati.</p>
+				<h1><span itemprop="name">John Berberich</span></h1>
 			</header>
-			<section>
-			{{ content }}
-			</section>
+			<div class="row">
+				<div class="col-sm-3 sidebar">
+					<div>
+						<p class="lead" itemscope itemtype="http://data-vocabulary.org/Person">
+							I'm a <span itemprop="title">Software Engineer</span>
+							in <span itemprop="address" itemscope itemtype="http://data-vocabulary.org/Address">
+								<span itemprop="locality">Cincinnati</span></span>.
+						</p>
+					</div>
+					<div>
+						<ul class="list-unstyled">
+							<li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
+							<li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
+							<li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
+							<li><a href="#"><i class="fa fa-envelope"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="col-sm-8 col-sm-offset-1">
+					{{ content }}
+				</div>
+			</div>
 		</div>
 	</div>
 
