--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,9 @@
 @import "bs-less/bootstrap.less";
 
+@brand-primary:  #D8D860;
+@body-bg:        @gray-darker;
+@text-color:     @gray-lighter;
+
 html, body {
 	height: 100%;
 }
