--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="description" content="" />
 	<meta name="google-site-verification" content="oTmLIeNN96Rw9Xv70CTpsVzkQJMCuTqe3GllV01s-5A" />
-	<title>{{ page.title }} | johnberberich.com</title>
+	<title>{{ page.title }}</title>
 	<link rel="stylesheet" href="css/font-awesome.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,24 +16,8 @@
     <![endif]-->
 </head>
 <body>
-	<div id="wrap">
+	<div class="wrap">
 		<div class="container">
-			<header class="page-header">
-				<nav>
-					<ul class="nav nav-pills pull-right">
-						<li><a href="projects.html">Projects</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-					<ul class="nav nav-pills pull-right">
-							<li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter-square"></i></a></li>
-							<li><a href="https://github.com/johnberberich"><i class="fa fa-github-square"></i></a></li>
-							<li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin-square"></i></a></li>
-							<li><a href="#"><i class="fa fa-envelope"></i></a></li>
-						</ul>
-				</nav>
-				<h1><span itemprop="name"><a href="/">John Berberich</a></span></h1>
-			</header>
 			<div class="row">
 				{{ content }}
 			</div>
@@ -42,7 +26,7 @@
 
 	<footer id="footer">
 		<div class="container">
-			<p id="copyright" class="text-muted">Copyright &copy; 2013 John Berberich</p>
+			<p id="copyright" class="text-muted">Copyright &copy; 2014 John Berberich</p>
 		</div>
 	</footer>
 
