--- a/css/main.css
+++ b/css/main.css
@@ -5823,7 +5823,7 @@ body {
   height: 100%;
 }
 body {
-  background: url(../img/avatar-bg.gif) right bottom no-repeat;
+  background: url(../img/avatar-l-bg.gif) right bottom no-repeat;
   background-position: fixed;
   background-size: 40% auto;
 }
@@ -5837,7 +5837,7 @@ body {
 }
 footer {
   height: 60px;
-  background-color: #F5F5F5;
+  text-align: center;
 }
 .container {
   width: auto;
@@ -5849,7 +5849,7 @@ footer {
 }
 @media (min-width: 768px) {
   body {
-    background: url(../img/avatar-bg.gif) top right no-repeat;
+    background: url(../img/avatar-l-bg.gif) top right no-repeat;
     background-position: fixed;
   }
 }
