--- a/less/main.less
+++ b/less/main.less
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-	background: url(../img/avatar-bg.gif) right bottom no-repeat;
+	background: url(../img/avatar-l-bg.gif) right bottom no-repeat;
 	background-position: fixed;
 	background-size: 40% auto;
 }
@@ -24,7 +24,7 @@ body {
 
 footer {
 	height: 60px;
-	background-color: #F5F5F5;
+	text-align: center;
 }
 
 .container {
@@ -39,7 +39,7 @@ footer {
 
 @media (min-width: @screen-sm-min) {
 	body {
-		background: url(../img/avatar-bg.gif) top right no-repeat;
+		background: url(../img/avatar-l-bg.gif) top right no-repeat;
 		background-position: fixed;
 	}
 }
