--- a/_layouts/one.html
+++ b/_layouts/one.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
-<div class="col-sm-12">
-	{{ content }}
+
+<div class="container">
+  <div class="row">
+
+    <div class="offset-by-two eight columns">
+    	{{ content }}
+    </div>
+
+  </div>
 </div>
