fix capitalization of GitHub

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
   <footer>
     <p>
       Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://getskeleton.com/" target="_blank">Skeleton</a>.
-      Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io" target="_blank">Github</a>.
+      Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io" target="_blank">GitHub</a>.
     </p>
     <p>&copy; 2014 John Berberich</p>
   </footer>
