convert resume to yml

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,9 @@
 </head>
 <body>
 
-  <section class="main">
+  <div class="main">
     {{ content }}
-  </section>
+  </div>
 
   <footer>
     <p>
