--- a/_layouts/game.html
+++ b/_layouts/game.html
@@ -10,7 +10,9 @@ layout: one
 
 <header>
   <h1>{{ page.title }}</h1>
-  <p>{{ page.excerpt }}</p>
+  {% if page.excerpt %}
+    <p>{{ page.excerpt }}</p>
+  {% endif %}
 </header>
 
 {{ content }}
