--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,12 +25,11 @@
   <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
-
-  <div class="main">
+  <main class="container">
     {{ content }}
-  </div>
+  </main>
 
-  <footer>
+  <footer class="container row offset-by-two eight columns">
     <p>
       Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://getskeleton.com/" target="_blank">Skeleton</a>.
       Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io" target="_blank">GitHub</a>.
