--- a/css/main.scss
+++ b/css/main.scss
@@ -45,9 +45,12 @@ main.container {
 }
 
 .resume {
+  .lead {
+    font-size: 2.0rem;
+  }
   a {
     color: rgb(0,0,0);
-    text-decoration: underline dots;
+    text-decoration: none;
   }
   .skill-list {
     list-style: none;
