--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
 
   <footer class="container row offset-by-two eight columns">
     <p>
-      Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="http://getskeleton.com/" target="_blank">Skeleton</a>.
-      Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io" target="_blank">GitHub</a>.
+      Powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://getskeleton.com/">Skeleton</a>.
+      Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io">GitHub</a>.
     </p>
     <p>&copy; 2014 John Berberich</p>
   </footer>
