--- a/_layouts/two.html
+++ b/_layouts/two.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="row">
 
-  <div class="sidebar three columns offset-by-one">
+  <div class="sidebar three columns">
     <div class="photo">
       <a href="/">
         <img src="/img/avatar.jpg" alt="John's face">
@@ -30,7 +30,7 @@ layout: default
     </div>
   </div>
 
-  <div class="seven columns">
+  <div class="nine columns">
     {% if page.header %}
     <header>
       <h1>{{ page.title }}</h1>
