--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,13 @@ body {
   padding-top: 1rem;
 }
 
+.row {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
 .sidebar {
   text-align: center;
 
