--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -31,7 +31,8 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  /*max-width: 960px;*/
+  max-width: 720px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
