center footer, round avatar

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,12 +27,12 @@ body {
 
   .social li {
     display: inline;
-    padding-right: .6em;
     font-size: 2em;
   }
 
   img {
     width: 200px;
+    border-radius: 100px;
   }
 }
 
