--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     {{ content }}
   </main>
 
-  <footer class="container row offset-by-two eight columns">
+  <footer class="container">
     <p>
       Powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://getskeleton.com/">Skeleton</a>.
       Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io">GitHub</a>.
