update linkedin url

--- a/_layouts/two.html
+++ b/_layouts/two.html
@@ -23,7 +23,7 @@ layout: default
     <div class="social">
       <ul>
         <li><a href="https://github.com/johnberberich"><i class="fa fa-github"></i></a></li>
-        <li><a href="http://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/johnberberich"><i class="fa fa-linkedin"></i></a></li>
         <li><a href="https://twitter.com/johnberberich"><i class="fa fa-twitter"></i></a></li>
         <li><a href="mailto:jberberich@gmail.com"><i class="fa fa-envelope"></i></a></li>
       </ul>
