--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,13 +8,7 @@
       {{ content }}
     </main>
 
-    <footer class="container">
-      <p>
-        Powered by <a href="http://jekyllrb.com/">Jekyll</a> and <a href="http://getskeleton.com/">Skeleton</a>.
-        Hosted on <a href="https://github.com/johnberberich/johnberberich.github.io">GitHub</a>.
-      </p>
-      <p>&copy; 2017 John Berberich</p>
-    </footer>
+    {% include footer.html %}
 
     {% include google_analytics.html %}
   </body>
