move google analytics into head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,15 @@
   {% include head.html %}
 
   <body>
+
+    {% include header.html %}
+
     <main class="container">
       {{ content }}
     </main>
 
     {% include footer.html %}
 
-    {% include google_analytics.html %}
   </body>
+
 </html>
