--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>
     {% if page.title %}
       {{ page.title }} &ndash;
@@ -7,9 +10,6 @@
     {{ site.title }}
   </title>
   <meta name="description" content="{{ site.description }}">
-  <meta name="author" content="{{ site.author.name }}">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   {% include google_site_verification.html %}
 
@@ -21,4 +21,8 @@
   <link rel="stylesheet" href="/css/main.css">
 
   <link rel="icon" type="image/png" href="/img/favicon.png">
+
+  {% if jekyll.environment == 'production' and site.google_analytics %}
+  {% include google-analytics.html %}
+  {% endif %}
 </head>
