--- a/css/main.scss
+++ b/css/main.scss
@@ -1,74 +1,8 @@
 ---
-# This ensures Jekyll reads the file to be transformed into CSS later.
-# Only main files contain this front matter, not partials.
 ---
 
-body {
-  padding-top: 1rem;
-}
+@import "normalize";
+@import "skeleton";
 
-.row {
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-}
-
-.sidebar {
-  text-align: center;
-
-  .tagline {
-    font-size: 2.5em;
-  }
-
-  ul li {
-    list-style: none;
-  }
-
-  .social li {
-    display: inline;
-    font-size: 2em;
-  }
-
-  img {
-    width: 200px;
-    border-radius: 100px;
-  }
-}
-
-footer {
-  text-align: center;
-  font-size: 1.2rem;
-  line-height: 1rem;
-
-  p {
-    margin: .5rem;
-  }
-}
-
-main.container {
-  border-bottom: 1px dotted #eee;
-  margin-bottom: 2rem;
-}
-
-.resume {
-  .lead {
-    font-size: 2.0rem;
-  }
-  a {
-    color: rgb(0,0,0);
-    text-decoration: none;
-  }
-  .skill-list {
-    list-style: none;
-    li {
-      display: inline;
-      &:after {
-        content: ", "
-      }
-      &:last-child:after {
-        content: ""
-      }
-    }
-  }
-}
+@import "variables";
+@import "base";
